--- a/src/css/main.css
+++ b/src/css/main.css
@@ -19,7 +19,7 @@ body {
   font-weight: bold;
 }
 
-.container {
+.main {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -27,7 +27,7 @@ body {
 }
 
 .search {
-  margin-top: 10px;
+  margin-top: 50px;
   padding-right: 20px;
 }
 
@@ -38,7 +38,7 @@ body {
   margin-right: 20px;
 }
 
-.btn-search, .btn-load  {
+.btn-search, .btn-load, .btn-clear  {
   padding: 5px 10px;
   margin-left: 5px;
   background-color: #061a40;
@@ -48,21 +48,38 @@ body {
   cursor: pointer;
 }
 
-.btn-search:hover, .btn-load:hover {
+.btn-search:hover, .btn-load:hover, .btn-clear:hover {
   background-color: #0353a4;
   color: #fff;
 }
 
-.btn-load {
+.btn-load, .btn-clear {
   border: 1px solid #000;
   padding: 10px 20px;
 }
 
-.main {
+.btn-load {
+  margin-top: 20px;
+}
+
+/* .search-info {
+    margin-top: 60px;
+} */
+
+.btn-clear {
+  display: none;
+  background-color: #061a40;
+  color: #b9d6f2;
+  border: 1px solid #fff;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.articles {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  padding: 60px 0 20px 0;
+  width: 100%;
 }
 
 .article {
@@ -85,8 +102,29 @@ body {
 
 .article__title {
   font-size: 16px;
-  text-align: left;
+  text-align: center;
   color: #07021b;
+}
+
+.options {
+  width: 100%;
+  display: flex;
+  align-items: flex-start;
+  color: #000;
+  margin-top: 80px;
+}
+
+.label-select {
+  font-size: 20px;
+  margin-left: 40px;
+}
+
+.custom-select {
+  min-width: 20px;
+  margin-left: 10px;
+  padding: 0 2px;
+  font-size: 16px;
+  text-align: center;
 }
 
 @media (min-width: 600px) {
